@@ -15,9 +15,11 @@
 #include <stdlib.h> /* qsort */
 #include <stdio.h> /* printf */
 #include <limits.h> /* INT_MAX */
-#include <libgen.h> /* basename */
 
+#include <libgen.h> /* basename */
 #include <sys/types.h> /* event.h needs this */
+#include <arpa/inet.h> /* inet_ntoa */
+
 #include <event.h>
 
 #include "transmission.h"
